--- a/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
+++ b/Sources/Background/Nature_of_Light/Reflection_Transmission.tex
@@ -44,9 +44,7 @@ where Z is the wave impedance for medium 1 and 2.  The power coefficients for tr
     T_P = 1 - R_P
 \end{align}
 %
-The Brewster angle is a special case where the $P$ polarization state is completely transmitted and no reflection of the TM wave occurs.  The reflected ray is therefore completely $S$ polarized since $R_P$ is zero and $R_S$ is a nonzero intensity.  For perfect air glass interactions typically considered, this angle is approximately 55 degrees.  Figure 5 shows the reflection and transmission coefficients versus incident angle for these two media.
-
-%Figure 5-Transmission and reflection coefficients for air and glass. Reproduced here without permission.%
+The Brewster angle is a special case where the $P$ polarization state is completely transmitted and no reflection of the TM wave occurs.  The reflected ray is therefore completely $S$ polarized since $R_P$ is zero and $R_S$ is a nonzero intensity.  For perfect air glass interactions typically considered, this angle is approximately 55 degrees.
 
 The Mueller matrix formulation for reflection and transmission reduces to the form of a linear polarizer for ideal surfaces.  It has been shown in \cite{polarizedlight} that the equation for a reflected beam off of a perfectly smooth dielectric surface is
 %
@@ -80,9 +78,7 @@ The Mueller matrix formulation for reflection and transmission reduces to the fo
     p_P = cos^2(\theta_{+})
 \end{align}
 and $\theta_{\pm}=\theta_i \pm \theta_r$.
-This is identical to the form of a linear diattenuator or polarizer from Equation.
-[TODO fill in prev eq number]
-For incident unpolarized light the equation simplifies to
+This is identical to the form of a linear diattenuator or polarizer from Equation 2.60. For incident unpolarized light the equation simplifies to
 %
 \begin{align}
     \begin{bmatrix}
@@ -102,6 +98,6 @@ For incident unpolarized light the equation simplifies to
     S_0
 \end{align}
 %
-Therefore, for ideal reflective surfaces, at the Brewster angle, light will be completely polarized perpendicular to the plane of incidence. It should be noted that the case of incident unpolarized light onto the target material, gives the polarizance vector of the Mueller Matrix as described in Section xx.
+Therefore, for ideal reflective surfaces, at the Brewster angle, light will be completely polarized perpendicular to the plane of incidence. It should be noted that the case of incident unpolarized light onto the target material, gives the polarizance vector of the Mueller Matrix as described in Section 2.1.3.
 
-Imperfect, non-ideal surfaces have the ability to reflect, transmit and absorb incident electromagnetic radiation.  The outcome of these interactions are related to the physiological makeup of the material, as well as its surface topology.  Multiple scattering mechanisms can be at work within a system, and numerous models have been attempted to balance the tradeoffs between practical realizability for measurements and accurate representation of scattering mechanisms [\cite{priest}, \cite{pbrdf}].  Only some of these models attempt to deal with the polarization of the incident, reflected, and transmitted beams.
+Imperfect, non-ideal surfaces have the ability to reflect, transmit and absorb incident electromagnetic radiation.  The outcome of these interactions are related to the physiological makeup of the material, as well as its surface topology.  Multiple scattering mechanisms can be at work within a system, and numerous models have been attempted to balance the tradeoffs between practical realizability for measurements and accurate representation of scattering mechanisms \cite{priest}, \cite{pbrdf}.  Only some of these models attempt to deal with the polarization of the incident, reflected, and transmitted beams.
