--- a/Sources/Background/Plant_Physiology/Photosynthesis.tex
+++ b/Sources/Background/Plant_Physiology/Photosynthesis.tex
@@ -10,6 +10,4 @@ The chemical reaction undergone during photosynthesis involves the conversion of
     6CO_2 + 6H_2O \xrightarrow{\text{light}} C_6H_12O_6 + 6O_2
 \end{align}
 %
-Due to water's integral role in this reaction, water stress in plants can lead to decreased photosynthetic activity.  It was pointed out by Ehleringer, referenced in \cite{akinci}, that water stress “can decrease…photosynthesis by reflecting quanta that might have been used in photosynthesis”.   Chlorophyll is an essential pigment in photosynthesis due to it being “an efficient light-absorbing molecule” \cite{ecophysiology}.  It is highly absorbing in the blue and red spectrum of visible light, and more reflective in the green portion.  The absorption spectrum for chlorophyll can be seen in Figure 8. This spectrum is what causes many leaves to be green.  Note that is regions outside the visible, chlorophyll does not absorb the incident radiation.
-
-[insert image of chlorophyll spectrum]
+Due to water's integral role in this reaction, water stress in plants can lead to decreased photosynthetic activity.  It was pointed out by Ehleringer, referenced in \cite{akinci}, that water stress “can decrease…photosynthesis by reflecting quanta that might have been used in photosynthesis”.   Chlorophyll is an essential pigment in photosynthesis due to it being “an efficient light-absorbing molecule” \cite{ecophysiology}.  It is highly absorbing in the blue and red spectrum of visible light, and more reflective in the green portion.  The absorption spectrum for chlorophyll can be found in \cite{chemistry}. This spectrum is what causes many leaves to be green.  Note that is regions outside the visible, chlorophyll does not absorb the incident radiation.
