--- a/Sources/Title.tex
+++ b/Sources/Title.tex
@@ -16,7 +16,7 @@
     \vfill
     A document submitted in partial fulfillment
     of the requirements for the degree of\\
-    \emph{Masters Thesis}\\
+    \emph{Masters of Science}\\
     at\\
     \textsc{Manhattan College}
   \end{center}
