--- a/Thesis.bib
+++ b/Thesis.bib
@@ -145,7 +145,6 @@
     keywords = {remote sensing, polarimetry}
 }
 %16
-%TODO Add this ref
 @book{chemistry,
     title = {Chemistry the Central Science},
     author = {Brown and Lemay and Bursten and Murphy and Woodward},
@@ -366,4 +365,18 @@
     title = "{An Overview of BRDF Models}",
     year = "2012",
     keywords = "surface, brdf"
+}
+%40
+@online{wikiroc,
+    author = "Wikipedia",
+    title = "Receiver operating characteristic",
+    url  = "https://en.wikipedia.org/wiki/Receiver_operating_characteristic",
+    keywords = "roc"
+}
+%41
+@online{plantexchange,
+    author = "Munns, R. and Schmidt, S. and Beveridge, C.",
+    title = "Plants in Action",
+    url  = "http://plantsinaction.science.uq.edu.au/book/export/html/4",
+    keywords = "plants"
 }
