--- a/Sources/Background/Remote_Sensing/VI_Spectral_Responses.tex
+++ b/Sources/Background/Remote_Sensing/VI_Spectral_Responses.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Vegetation Indices and Spectral Responses}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Spectral response patterns in remote sensing have been shown to useful [TODO many sources] for determining the health of land vegetation.  The reflection and scattering of light off vegetation using different spectral bands of incident light, allows for the classification of land objects and vegetation health.  The detector response to these processes are known as spectral responses.  Spectral responses are quantitative measures that change with the condition of the vegetation under inspection.  As plants become stressed, as in the case of water deficiency or drought, their physiological makeup changes.  A variety of different factors can affect the exact spectral response of an object \cite{remotesensing}.
+Spectral response patterns in remote sensing have been shown to useful \cite{mississippi}\cite{schott}\cite{harris} for determining the health of land vegetation.  The reflection and scattering of light off vegetation using different spectral bands of incident light, allows for the classification of land objects and vegetation health.  The detector response to these processes are known as spectral responses.  Spectral responses are quantitative measures that change with the condition of the vegetation under inspection.  As plants become stressed, as in the case of water deficiency or drought, their physiological makeup changes.  A variety of different factors can affect the exact spectral response of an object \cite{remotesensing}.
 
 Vegetative Indices (VI) are ratios between different spectral responses for the purpose of determining the condition and health of plants.  Various combinations of frequencies have been combined to form standard VI’s utilizing the visible spectrum and the infrared spectrum. In its most basic form a vegetation index is defined by,
 %
@@ -18,9 +18,7 @@ The Normalized Difference Vegetation Index (NDVI) utilizes a plant's response to
 \end{align}
 %
 In comparison, clouds, snow, and water all have relatively high visible responses and low NIR response.  Therefore, little interference from these effects is contributed to the overall NDVI.  Moreover, most satellites average NDVI recordings over a few days to also alleviate any interference with clouds and other particles in the atmosphere \cite{remotesensing}.
-The NDVI takes advantage of the extreme shift in reflectance and transmittance for plants between the visible and near infrared regions known as the red gap shown in Figure 10.
-
-%TODO insert transmittance and reflectance image
+The NDVI takes advantage of the extreme shift in reflectance and transmittance for plants between the visible and near infrared regions known as the red gap shown in \cite{vanderbilt}.
 
 The reflectance curve for a plant leaf versus wavelength, shows that green light (~500-600nm) is the most reflected wavelength of light, and accounts for the green color of leaves. Red is (~600-750nm) and and blue light (~400-500nm) are shown to be highly absorbed.  This is due to these frequencies being used in photosynthesis and the high absorption of chlorophyll in these regions.
 
