--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -21,9 +21,9 @@ The areas of remote sensing, image processing, and machine learning have all bee
 
 Remote sensing in particular has had a tremendous impact on precision agricultural as it opens up the possibility of large area surveying and field health assessment.  Recently satellite data has been made easily available to the public through hosting on Amazon Web Services S3 buckets.  They include data from Landsat 8, the Geostationary Operational Environmental Satellites (GOES), NASA Earth Exchange (NEX), and the National Agricultural Imagery Program (NAIP).  These datasets contain information on various spectral responses recorded by various satellites.  Some of the datasets also contain scenes captured through polarization filters oriented at various angles. These polarization images can be useful for deriving certain backscatter and volume scattering properties of the scene under investigation and have been utilized by \cite{mississippi}, \cite{sarag}.
 
-[CHECK] When interpreting data from remotely sensed imagery of vegetation, it is important to understand the scattering mechanisms inherent to the various features found within a particular image.  This includes scattering from background objects such as soil, man made objects, canopies, etc. as well as target objects such as crops. Canopies are made up of individual leaves.  It is important to understand the scattering mechanisms that occur from each leaf in order to gain an increased insight into the larger effects evident in canopies. More precise models can then be created for the purpose of extrapolating micro level effects to the macro level.
+When interpreting data of remotely sensed vegetation, it is important to understand the scattering mechanisms inherent to the various features found within a particular image.  This includes scattering from background objects such as soil, man made objects, canopies, etc. as well as target objects such as crops. Canopies are made up of individual leaves.  The scattering mechanisms that occur from each leaf can provide an increased insight into the larger effects evident in canopies. More precise models can then be created for the purpose of extrapolating micro level effects to the macro level.
 
-[CHECK] Furthermore, as more agricultural operations are moved indoors, information acquired from cameras monitoring these greenhouses can provide insights into the health and growth stages of various crops. Research into building greenhouses in space for the colonization of other planets, has always grown substantially as of late, with programs such as SpaceX looking into the possibility of placing a greenhouse on Mars.  This provides an opportunity for placing image sensors into confined growing areas for monitoring plants on a micro scale.
+Furthermore, as more agricultural operations move indoors, information acquired from cameras monitoring these greenhouses can provide insights into the health and growth stages of various crops. Research into building greenhouses in space for the colonization of other planets, has grown substantially recently, with programs such as SpaceX looking into the possibility of placing a greenhouse on Mars.  This provides an opportunity for utilizing image sensors into confined growing areas for monitoring plants on a micro scale.
 
 Vegetation indices (VI) have been created for quantifying the health of land plants from remotely sensed data.  These indices rely on the spectral signatures exhibited by plants that vary with the state of a vegetation’s health \cite{remotesensing}.  It is possible that these ideas can be applied to smaller scale indoor scenarios as well.
 
@@ -33,4 +33,4 @@ Machine learning techniques have been applied to a large number of different res
 
 As consumer drones have entered the marketplace, it has become more reasonable for smaller scale farmers to utilize these remote sensors for monitoring there fields.  Consumer off the shelf (COTS) cameras have also decreased in price, allowing for cheap installation and modification for the purpose of agricultural monitoring at different scales.
 
-[CHECK] This work investigates the effects of light reflected from individual plant leaves by multiple scattering mechanisms using a COTS camera at a micro scale.  This information can be used for the purpose of classification and ultimately determining the health of a plant based on the physiological properties of individual leaves by observing their polarization and texture properties as detected by the camera.  As resources become more scare, and the price of certain technologies decreases, the impact of utilizing information acquired by these sensors for precision agricultural will be large.
+This work investigates the effects of light reflected from individual plant leaves by multiple scattering mechanisms using a COTS camera at a micro scale.  This information is intended to be useful for the purpose of classification and ultimately determining the health of a plant based on the physiological properties of individual leaves by observing their polarization and texture properties as detected by the camera.  As resources become more scare, and the price of certain technologies decreases, the impact of utilizing information acquired by these sensors for precision agricultural will be large.
